@@ -103,7 +103,7 @@ extern reloc_howto_type * xcoff64_reloc_type_lookup
 extern boolean _bfd_xcoff_slurp_armap PARAMS ((bfd *));
 extern PTR _bfd_xcoff_read_ar_hdr PARAMS ((bfd *));
 extern bfd *_bfd_xcoff_openr_next_archived_file PARAMS ((bfd *, bfd *));
-extern int _bfd_xcoff_generic_stat_arch_elt PARAMS ((bfd *, struct stat *));
+extern int _bfd_xcoff_stat_arch_elt PARAMS ((bfd *, struct stat *));
 extern boolean _bfd_xcoff_write_armap
   PARAMS ((bfd *, unsigned int, struct orl *, unsigned int, int));
 extern boolean _bfd_xcoff_write_archive_contents PARAMS ((bfd *));
@@ -2577,9 +2577,9 @@ const bfd_target rs6000coff64_vec =
   bfd_dont_truncate_arname,                /* _truncate_arname */
   _bfd_xcoff_write_armap,                  /* _write_armap */
   _bfd_xcoff_read_ar_hdr,                  /* _read_ar_hdr */
-  xcoff64_openr_next_archived_file,     /* _openr_next_archived_file */
+  xcoff64_openr_next_archived_file,        /* _openr_next_archived_file */
   _bfd_generic_get_elt_at_index,           /* _get_elt_at_index */
-  _bfd_xcoff_generic_stat_arch_elt,        /* _generic_dtat_arch_elt */
+  _bfd_xcoff_stat_arch_elt,                /* _generic_stat_arch_elt */
   /* XCOFF archives do not have
      a timestamp.  */
   bfd_true,                                /* _update_armap_timestamp */
